# transformer-clip-eeg

./: .gitignore  README.md  clip_model.py  dataset_loader.py  fold_split.json  main.py  pyproject.toml  requirements.txt  train_clip_final.py  train_clip_helper_functions.py  vlaai.py
preprocess_audio/: create_wav2vec.py
